[FIX] website_livechat: fix ai chat appearing under SEO Dialog
- When the MediaDialog is opened from the SEO Optimization Dialog, and
then the AI chat channel is opened, the channel appears under the SEO
Dialog. if Livechat is installed. The channel should always appear above
the SEO Dialog. Otherwise, the user won't be able to interact with it.
Steps to reproduce:
  1. Install the livechat app.
  2. Open the website.
  3. Click on 'Editor'.
  4. Click on 'site' on the top left corner.
  5. Click on optimize seo.
  6. Click on the upload button to open the MediaDialog.
  7. Click on the AI button.
  8. The channel appears under the SEO Dialog.

This happens because the backend ChatHub is hidden on website unless we
are in edit mode (the editor side bar is open) and so the AI channel
opened from the MediaDialog will be opened using the frontend ChatHub
which makes it hard to adapt the z-index of the chat channel to make it
appear above the SEO Dialog. To solve this issue, the scss rule that
hides the backend ChatHub is adapted to show the ChatHub if the SEO
Dialog is open.

task-6058554

--- a/addons/website_livechat/static/src/core/common/website_livechat_edit_mode.scss
+++ b/addons/website_livechat/static/src/core/common/website_livechat_edit_mode.scss
@@ -5,6 +5,6 @@ body.editor_enable .o-livechat-root {
     }
 }
 
-body:has(.o_website_preview):not(.o_builder_open) .o-mail-ChatHub {
+body:has(.o_website_preview):not(.o_builder_open):not(:has(.oe_seo_configuration)) .o-mail-ChatHub {
     visibility: hidden;
 }
